--- a/Unity/AppLovinAdapterSampleApp/Assets/Kidoz/Plugins/Android/KidozSdk.androidlib/AndroidManifest.xml
+++ b/Unity/AppLovinAdapterSampleApp/Assets/Kidoz/Plugins/Android/KidozSdk.androidlib/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:hardwareAccelerated="true">
-        <activity android:name="com.kidoz.sdk.api.ui_views.interstitial.KidozAdActivity"
+        <activity android:name="com.kidoz.sdk.api.ui_views.interstitial.KidozAdActivity" android:exported="false"
                   android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
                   />
     </application>
